# telegram_stickers_organizer

./: .editorconfig  .env.example  .flake8  .gitignore  Procfile  README.md  pyproject.toml
.github/workflows/: ci.yml
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/RenderSticker/: index.tsx
frontend/src/app/manage-stickers/: page.tsx
frontend/src/app/stickerpack/[name]/: page.tsx
frontend/src/app/stickerpack/[set_name]/: page.tsx
makefiles/: frontend.mk  ngrok.mk  uv.mk
src/telegram_stickers_organizer/: __init__.py  config.py  constants.py  dispatcher.py  main.py
src/telegram_stickers_organizer/api/: sticker_controller.py
src/telegram_stickers_organizer/handlers/: add_stickers_to_stickerpack.py  edit_stickerpack.py  merge_stickersets.py  message.py  remove_last_n_stickers.py  rename_stickerset.py  start.py
src/telegram_stickers_organizer/interactors/: copy_sticker_set.py  download_sticker.py  merge_sticker_sets.py  move_sticker_to_another_set.py  remove_last_stickers.py
src/telegram_stickers_organizer/keyboard/: constants.py  kb_add_stickers_to_stickerpack.py  kb_edit_stickerpack.py  kb_start.py  kb_stolen_stickerpacks.py
src/telegram_stickers_organizer/middlewares/: auth_middleware.py
src/telegram_stickers_organizer/repositories/: stickers_repository.py
src/telegram_stickers_organizer/utils/: sticker_helpers.py
