[project]
name = "telegram-stickers-organizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.12.0",
    "python-decouple>=3.8",
    "tinydb>=4.8.0",
    "emoji>=2.12.1",
    "aiohttp-cors>=0.7.0",
    "pylottie>=2024",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
